# rawgrep

./: Cargo.toml  LICENSE  README.md  build.rs  deny.toml  dependabot.yml  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5gbsqcj2qs7h9dzfvpfv4jic2m5xdx37-source  nv0f6mcdixfwhjqxnnrk3iwfvkgbrxjl-source  rm0qxay7rv1nrjmk9006zyksanygsn6s-source
.github/workflows/: rust.yml
emacs/: rawgrep.el
src/: binary.rs  cli.rs  ext4.rs  grep.rs  ignore.rs  lib.rs  main.rs  matcher.rs  parser.rs  path_buf.rs  stats.rs  util.rs  worker.rs  writer.rs
