[package]
name = "rawgrep"
version = "0.1.0"
edition = "2024"

[features]
default = ["dep:mimalloc"]
mimalloc = ["dep:mimalloc"]
use_nightly = []
tracy = ["tracy-client/enable"]

[dependencies]
regex = "1"
memmap2 = "0.9"
smallvec = { version = "1.15.1", features = ["const_generics"] }
mimalloc = { version = "=0.1.47", optional = true }
ctrlc = "3.5.1"
memchr = "2.7.6"
aho-corasick = "1.1.4"
libc = "0.2.177"
ignore = "0.4.25"
clap = { version = "4.5", features = ["std", "help", "derive"], default-features = false }
tracy-client = { version = "0.17.3", default-features = false }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
itoa = "1.0.15"
fastrand = "2.3.0"
bytemuck = { version = "1.24", features = ["derive"] }

[build-dependencies]
rustc_version = "0.2"

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false
debug-assertions = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
