[package]
name = "rawgrep"
version = "0.1.0"
edition = "2024"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "The fastest grep in the world"
homepage = "https://github.com/rakivo/rawgrep"
repository = "https://github.com/rakivo/rawgrep"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
build = "build.rs"
rust-version = "1.85.1"

[features]
default = ["dep:mimalloc", "full"]
use_nightly = []

# profiling
tracy = ["tracy-client/enable"]

# allocators
mimalloc = ["dep:mimalloc"]
dhat = ["dep:dhat"]

# Want a small binary? Do this:
# RUSTFLAGS="-Zunstable-options -Cpanic=immediate-abort -Zlocation-detail=none -Zfmt-debug=none" \
#     cargo +nightly b \
#        -Z build-std=std,panic_abort \
#        -Z build-std-features= \
#         --profile=release-fast --target=x86_64-unknown-linux-gnu --no-default-features --features=use_nightly,full,mimalloc
small = ["regex-tiny", "clap-tiny"]

full  = ["regex-full", "clap-full"]

[dependencies]
regex-full = { package="regex", version="1", default-features=false, features=["std", "perf"], optional=true }
regex-tiny = { package="regex", version="1", default-features=false, optional=true }

clap-full  = { package="clap", version="4.5", default-features=false, features=["std", "help", "derive"], optional=true }
clap-tiny  = { package="clap", version="4.5", default-features=false, features=["std", "derive"], optional=true }

aho-corasick = { version = "1.1.4", default-features = false }
memmap2 = { version = "0.9", default-features = false }
smallvec = { version = "1.15.1", features = ["const_generics"] }
mimalloc = { version = "=0.1.47", optional = true }
ctrlc = { version = "3.5.1", default-features = false }
memchr = { version = "2.7.6", default-features = false, features = ["std"] }
libc = { version = "0.2.177", default-features = false }
tracy-client = { version = "0.17.3", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false, features = ["std"] }
crossbeam-deque = { version = "0.8.6", default-features = false, features = ["std"] }
itoa = { version = "1.0.15", default-features = false }
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
bytemuck = { version = "1.24", features = ["derive"] }
dhat = { version = "0.3.3", default-features = false, optional = true }
phf = { version = "0.13.1", features = ["macros"] }

[build-dependencies]
rustc_version = "0.2"

[profile.release-fast]
inherits = "release"
opt-level = 3
panic = "abort"
codegen-units = 1
lto = "fat"
debug = false
strip = true
overflow-checks = false
debug-assertions = false

[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = "fat"
strip = true
debug = 0
overflow-checks = false
debug-assertions = false

# also: set RUSTFLAGS="-C force-frame-pointers=yes"
[profile.profiling]
inherits = "release"
debug = true                      # keep DWARF symbols
split-debuginfo = "packed"        # so perf can find them easily (Linux)
strip = "none"                    # don’t strip symbols
lto = false
codegen-units = 16
overflow-checks = false
panic = "abort"                   # optional: less noise, smaller code

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)'] }
